--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8"
+    "nativewind": "^2.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.11.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.7.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
